--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.12.2",
     "framer-motion": "^12.23.12",
+    "laravel-echo": "^2.2.0",
     "lucide-react": "^0.544.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
