--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "laravel-echo": "^2.2.0",
     "lucide-react": "^0.544.0",
